<resources>
    <string name="app_name">SneakPeek</string>
    <string name="movie_poster_image_description">Movie Poster Image</string>
    <string name="activity_main_plot">Plot</string>
    <string name="activity_main_director">Director</string>
    <string name="activity_main_genre">Genre</string>
    <string name="activity_main_runtime">Runtime</string>
    <string name="activity_main_actors">Actors</string>
    <string name="activity_detail_original_language">Language</string>
    <string name="activity_detail_budget">Budget</string>
    <string name="activity_detail_vote_average">Votes</string>
    <string name="activity_main_writer">Writer</string>
    <string name="activity_main_released">Released</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_switch_theme">Switch theme</string>
    <string name="dialog_about_github_logo">Github Logo</string>
    <string name="movie_list_item_dummy_number">1.</string>

    <string name="sync_account_type">sneakpeek.sneak.de</string>
    <string name="content_authority">de.sneak.sneakpeek.provider</string>
    <string name="fragment_name_movies">Movies</string>
    <string name="fragment_name_studios">Studios</string>
    <string name="fragment_name_previous_movies">Previous Movies</string>
    <string name="actual_week">Week %1$s - %2$s</string>
    <string name="activity_detail_budget_na">NA</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_about_text">SneakPeek shows the movie predictions for the upcoming sneak preview at Cineplex Potsdamer Platz, the list of studios for the corresponding movies and the previously shown movies.\n\nVersion %1$s</string>
    <string name="banana_image">Banana image</string>
    <string name="fragment_name_statistics">Statistics</string>
    <string name="statistic_fragment_cumulative_distribution_description">Probability of up until n-th prediction is correct</string>
    <string name="statistic_fragment_distribution_description">Probability of n-th prediction is correct</string>
    <string name="statistic_fragment_dataset_size">Dataset size:</string>
    <string name="fragment_statistics_total_predictions">Total Predictions:</string>
    <string name="fragment_statistics_studios_number">Number of Studios:</string>
    <string name="fragment_statistics_unique_predictions">Unique Predictions:</string>
    <string name="fragment_statistics_actual_movies">Actual Movies:</string>
    <string name="activity_detail_vote_average_na">-</string>
</resources>
