<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:paddingBottom="24dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/activity_detail_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        style="?attr/secondaryTextStyle"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="112 min"/>

    <TextView
        android:id="@+id/activity_detail_genre"
        style="?attr/secondaryTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_runtime"
        tools:text="Action | Romance | Thriller"/>

    <TextView
        android:id="@+id/activity_detail_plot"
        style="?attr/primaryTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_genre"
        tools:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum."/>

    <TextView
        android:id="@+id/activity_detail_director"
        style="?attr/primaryTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_detail_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_director_text"
        tools:text="Blub"/>

    <TextView
        android:id="@+id/activity_detail_director_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_main_director"
        style="?attr/secondaryTextStyle"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_detail_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_plot"/>

    <TextView
        android:id="@+id/activity_detail_writer_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_main_writer"
        style="?attr/secondaryTextStyle"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/activity_detail_vertical_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_plot"/>

    <TextView
        android:id="@+id/activity_detail_writer"
        style="?attr/primaryTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:text="Fred Bred"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/activity_detail_writer_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_writer_text"/>

    <TextView
        android:id="@+id/activity_detail_released"
        style="?attr/primaryTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_detail_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_released_text"
        tools:text="15.02.2932"/>

    <TextView
        android:id="@+id/activity_detail_released_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_main_released"
        style="?attr/secondaryTextStyle"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_detail_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_director"/>

    <TextView
        android:id="@+id/activity_detail_original_language_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_detail_original_language"
        style="?attr/secondaryTextStyle"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/activity_detail_vertical_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_writer"/>

    <TextView
        android:id="@+id/activity_detail_original_language"
        style="?attr/primaryTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/activity_detail_original_language_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_original_language_text"
        tools:text="Germany"/>

    <TextView
        android:id="@+id/activity_detail_vote_average"
        style="?attr/primaryTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/activity_detail_vote_average_text"
        app:layout_constraintTop_toTopOf="@+id/activity_detail_vote_average_text"
        tools:text="92"/>

    <TextView
        android:id="@+id/activity_detail_vote_average_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_detail_vote_average"
        android:textSize="18sp"
        style="?attr/secondaryTextStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_released"/>

    <TextView
        android:id="@+id/activity_detail_budget"
        style="?attr/primaryTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/activity_detail_budget_text"
        app:layout_constraintTop_toTopOf="@+id/activity_detail_budget_text"
        tools:text="87"/>

    <TextView
        android:id="@+id/activity_detail_budget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_detail_budget"
        style="?attr/secondaryTextStyle"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_detail_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_original_language"/>

    <TextView
        android:id="@+id/activity_detail_actors_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_main_actors"
        android:textSize="18sp"
        style="?attr/secondaryTextStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_vote_average_text"/>

    <android.support.constraint.Guideline
        android:id="@+id/activity_detail_vertical_guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintGuide_end="192dp"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="0dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_detail_recycler_view_actors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_actors_text"/>

    <TextView
        android:id="@+id/activity_detail_original_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        style="?attr/secondaryTextStyle"
        app:layout_constraintLeft_toRightOf="@+id/activity_detail_runtime"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="- Random Title"/>

</android.support.constraint.ConstraintLayout>